# skills-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  FOLLOW_UPS.md  PROGRESS.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: release.yml
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/: sm-agents  sm-authoring  sm-debug  sm-install  sm-overview  sm-packs  (+2 more)
crates/skills-manager-core/: Cargo.toml
crates/skills-manager-core/assets/builtin-skills/sm-agents/: SKILL.md
crates/skills-manager-core/assets/builtin-skills/sm-authoring/: SKILL.md
crates/skills-manager-core/assets/builtin-skills/sm-debug/: SKILL.md
crates/skills-manager-core/assets/builtin-skills/sm-install/: SKILL.md
crates/skills-manager-core/assets/builtin-skills/sm-overview/: SKILL.md
crates/skills-manager-core/assets/builtin-skills/sm-packs/: SKILL.md
crates/skills-manager-core/assets/builtin-skills/sm-scenarios/: SKILL.md
crates/skills-manager-core/assets/builtin-skills/sm-skills/: SKILL.md
crates/skills-manager-core/src/: builtin_skills.rs  central_repo.rs  dedup.rs  diff.rs  git_backup.rs  git_fetcher.rs  installer.rs  lib.rs  migrations.rs  pack_seeder.rs  plugins.rs  project_scanner.rs  router_render.rs  scanner.rs  skill_store.rs  skillsmp_api.rs  sync_engine.rs  tool_adapters.rs  version_store.rs
crates/skills-manager-core/src/sync_engine/: disclosure.rs  mod.rs
docs/: HANDOFF-2026-04-21.md  STATUS.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
(+80 files in other folders)
