[package]
name = "skills-manager-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Core library for Skills Manager — DB, sync, adapters, and pack management"

[features]
default = []
tauri-compat = ["dep:tauri"]
tokio-compat = ["dep:tokio"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
similar = "2"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
dirs = "5.0"
walkdir = "2.5"
git2 = { version = "0.19", features = ["vendored-openssl"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2"
zip = "2"
tempfile = "3.26.0"
semver = "1"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"

# Optional framework-specific deps
tauri = { version = "2.10.0", features = ["tray-icon"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
